Fri Dec  3 00:00:15 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): bug fix around at_exit (1) timing was
	  wrong. (2) execution order was opposite.

Thu Dec  2 00:31:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): Perhaps it would be more appropriate
	  for at_ext functions be called here,

	* vm.c (ruby_vmptr_destruct): than here.

Thu Dec  2 00:10:04 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_free): A VM can not always be killed only because an
	  objspace has no reference to it; a VM can be seen "outside" of
	  itself.  Namely a VM's itself and its parent are not suitable
	  here to be freed.  Note however, that this criteria is a
	  heuristic given a VM "lives" in other VM's objspace and do not
	  move across a home ground VM i.e.  VMs holds parent-child
	  relationships.  If this is broken -- when a child lives longer
	  than a parent -- the situation gets much complex.

Wed Dec  1 19:35:54 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (rb_objspace_free): Ensure to free objects.  Before this
	  there has been no chance for a object to be freed when a VM
	  shuts down, which led to memory leaks.  I'm still not sure if
	  rb_objspace_free is the right place to deallocate those as-yet
	  living objects so if someone thinks it isn't, please tell me.

Tue Nov 30 21:29:51 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/vm.h (ruby_vm_at_exit): new method.

	* mvm.c (ruby_vm_at_exit): new method.

	* vm_core.h (rb_vm_struct): new field.

	* vm.c (vm_init2): initialize the new field.

	* vm.c (ruby_vmptr_destruct): kick the functions.

Tue Nov 30 16:47:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): When reaching to this condition this
	  mutex is locked, and a locked mutex cannot be destroyed.
	  Personal impression: it is pthread's fault that a locked mutex
	  cannot be destroyed.  Instead I believe a mutex should be