@@ -1,3 +1,11 @@
+Thu Dec  2 21:22:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* encoding.c (enc_alias_internal): free the copied key and
+	  return NULL when given key is already regisitered.
+
+	* encoding.c (enc_alias): call set_encoding_const only when the
+	  alias is not registered yet.
+
 Fri Dec  3 00:00:15 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* eval.c (ruby_vm_cleanup): bug fix around at_exit (1) timing was
